--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Salmon Cookies</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <!--<link rel="stylesheet" href="css/reset.css">-->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
@@ -11,7 +11,8 @@
     </header>
     <main>
       <h2>Number of cookies per day for each location</h2>
-      <div id='location'>
+      <div>
+          <a href="sales.html">SALES</a>
       </div>
     </main>
     <footer></footer>
