--- a/sales.html
+++ b/sales.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Salmon Cookies</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <!--<link rel="stylesheet" href="css/reset.css">-->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
