--- a/sales.html
+++ b/sales.html
@@ -13,6 +13,8 @@
       <h2>Number of cookies per day for each location</h2>
       <div id='location'>
       </div>
+      <div id='table'>
+      </div>
     </main>
     <footer></footer>
     <script src="js/app.js"></script>
