added the totals and created links to pages

--- a/sales.html
+++ b/sales.html
@@ -8,9 +8,16 @@
   <body>
     <header>
       <h1>Salmon Cookies</h1>
+      <nav>
+        <ul>
+          <li><a href = "index.html">Home</a></li>
+          <li><a href = "">Contact</a></li>
+          <li><a href = "">About</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-      <h2>Number of cookies per day for each location</h2>
+      <h2>Sales Table: Number of cookies per day for each location</h2>
       <div id='location'>
       </div>
       <div id='table'>
