--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Salmon Cookies</title>
+    <title>Salmon-Cookies</title>
     <!--<link rel="stylesheet" href="css/reset.css">-->
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
