--- a/sales.html
+++ b/sales.html
@@ -22,6 +22,22 @@
       </div>
       <div id='table'>
       </div>
+      <div>
+        <form id="addStandForm">
+          <fieldset>
+            <legend>Add a new stand :</legend>
+          <label for="name">Stand Location</label>
+          <input type="text" id="name" placeholder="Enter the location of the new stand">
+          <label for="minCustomerPerHour">Minimum number of customers</label>
+          <input type="number" id="minCustomerPerHour" placeholder="Enter the min number of customers per hour">
+          <label for="maxCustomerPerHour">Maximum number of customers</label>
+          <input type="number" id="maxCustomerPerHour" placeholder="Enter the max number of customers per hour">
+          <label for="avgCookiesPerCustomer">Average number of cookies</label>
+          <input type="number" id="avgCookiesPerCustomer" placeholder="Enter the average number of cookies per customer">
+          <input type="submit">
+        </fieldset>
+        </form>
+      </div>
     </main>
     <footer></footer>
     <script src="js/app.js"></script>
