--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
   <head>
     <title>Salmon-Cookies</title>
-    <!--<link rel="stylesheet" href="css/reset.css">-->
+    <link rel="stylesheet" href="css/reset.css">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <h1>Salmon Cookies</h1>
+        <nav>
+            <ul>
+                <img src="/img/chinook.jpg"> 
+                <li><a href="index.html">Home</a></li> 
+                <li><a href="sales.html">Sales</a></li>
+                <li><a href="">Branches</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <h2>Number of cookies per day for each location</h2>
-      <div>
-          <a href="sales.html">SALES</a>
       </div>
     </main>
     <footer></footer>
