home page and css edits

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
       <h1>Salmon Cookies</h1>
         <nav>
-            <ul>
-                <img src="/img/chinook.jpg"> 
+          <img src="img/chinook.jpg"> 
+            <ul class="navUl">
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="sales.html">Sales</a></li>
                 <li><a href="">Branches</a></li>
@@ -19,9 +19,41 @@
         </nav>
     </header>
     <main>
-      </div>
+      <section>
+        <ul class="sectionUl">
+          <li class="List">
+            <h2 class="sectionHeading">ABOUT US</h2>
+        <pre>
+         Salmon Cookies is a coffee-time confection combining two signature Seattle icons:
+
+         <span><img class="sectionImages" src="img/fish.jpg"> <img class="sectionImages" src="https://cdn.shopify.com/s/files/1/0740/5643/products/shutterstock_397924624.jpeg?v=1460312995"></span> 
+
+         We sell cookies made into the shape of a salmon 
+
+         <span><img class="sectionImages" src="img/frosted-cookie.jpg"></span>
+        </pre>
+          </li>
+          <li class="List">
+            <h2 class="sectionHeading">OUR LOCATIONS</h2>
+            <span id="map">
+              <iframe width="500" height="500" src="https://maps.google.com/maps?q=Seatle&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a> 
+              <iframe width="500" height="500" src="https://maps.google.com/maps?q=Tokyo&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a>
+            </span>
+            <span>
+              <iframe width="500" height="500" src="https://maps.google.com/maps?q=Dubai&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a>
+              <iframe width="500" height="500" src="https://maps.google.com/maps?q=Paris&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a>
+            </span>
+            <span>
+              <iframe width="500" height="500" src="https://maps.google.com/maps?q=Lima&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a>
+            </span>
+          </li>
+          <li></li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>CopyRights for Pat's Salmon Cookies</p>
+    </footer>
     <script src="js/app.js"></script>
   </body>
 </html>
